--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#security.user.name=admin
+#security.user.password=admin
+
 #DataSource settings:
 spring.datasource.url=jdbc:postgresql://localhost:5432/spring-secu-db
 spring.datasource.username=postgres
